(library
 (name        bmex)
 (public_name bmex)
 (modules bmex)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   sexplib
   fixtypes
   ptime
   ptime.clock.os
   uuidm
   logs
   uri
   digestif.c
   yojson
   ocplib-json-typed))

(library
 (name        bmex_rest)
 (public_name bmex-rest)
 (modules bmex_rest)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   core
   async
   httpaf
   logs-async
   bmex
   bitmex-types
   fastrest))

(library
 (name        bmex_ws)
 (public_name bmex-ws)
 (modules bmex_ws)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   bmex
   ptime
   sexplib))
