(test
 (name       test)
 (modules    test)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
  bmex-rest
  alcotest-async
  logs-async-reporter))

(executable
 (name ws)
 (modules ws)
 (public_name bmex-ws-cli)
 (package bmex-ws-async)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   logs-async-reporter
   bmex-ws
   bmex-ws-async))

(executable
 (name fh)
 (modules fh)
 (public_name bmex-ws-fh)
 (package bmex-ws-async)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   logs-async-reporter
   bmex-ws
   bmex-ws-async
   kx-async))
