(test
 (name       test)
 (modules    test)
 (preprocess (pps ppx_jane))
 (libraries
  bmex-rest
  alcotest-async
  logs-async-reporter))

(executable
 (name ws)
 (modules ws)
 (public_name bmex-ws-cli)
 (package bmex-ws-async)
 (preprocess (pps ppx_jane))
 (libraries
   logs-async-reporter
   bmex-ws
   bmex-ws-async))

(executable
 (name fh)
 (modules fh)
 (public_name bmex-ws-fh)
 (package bmex-ws-async)
 (preprocess (pps ppx_jane))
 (libraries
   logs-async-reporter
   bmex-ws
   bmex-ws-async
   kx-async))

(executable
 (name compta)
 (modules compta)
 (public_name bmex-compta)
 (package bmex-rest)
 (preprocess (pps ppx_jane))
 (libraries
   logs-async-reporter
   bmex-rest
   kx-async
   bmex-ws
   bmex-ws-async))
