(test
 (name       test)
 (modules    test)
 (package bmex-rest)
 (preprocess (pps ppx_jane))
 (libraries
  bmex-rest
  alcotest-async))

(executable
 (name ws)
 (modules ws)
 (public_name bmex-ws-cli)
 (package bmex-bin)
 (preprocess (pps ppx_jane))
 (libraries
   core
   async
   logs-async
   logs-async-reporter
   fastws-async
   bmex-ws))

(executable
 (name fh)
 (modules fh)
 (public_name bmex-ws-fh)
 (package bmex-bin)
 (preprocess (pps ppx_jane))
 (libraries
   core
   async
   fastws-async
   logs-async-reporter
   bmex-ws
   kx-async))

(executable
 (name compta)
 (modules compta)
 (public_name bmex-compta)
 (package bmex-bin)
 (preprocess (pps ppx_jane))
 (libraries
   logs-async-reporter
   bmex-rest
   kx-async
   bmex-ws))
